@@ -1,34 +1,42 @@
+// src/core/GraphLoader.java
 package core;
 
 import java.io.*;
-import java.nio.file.*;
 import java.util.*;
 
 public class GraphLoader {
+
     public static Graph loadGraphFromFile(String path, int numCriteria) throws IOException {
-        BufferedReader reader = Files.newBufferedReader(Paths.get(path));
-        String line;
-        int maxNode = 0;
-        List<String[]> parsed = new ArrayList<>();
+        Map<Integer, List<Edge>> adj = new HashMap<>();
 
-        while ((line = reader.readLine()) != null)  {
-            if (line.trim().isEmpty() || line.startsWith("#")) continue;
-            String[] parts = line.trim().split("\\s+");
-            parsed.add(parts);
-            maxNode = Math.max(maxNode, Math.max(Integer.parseInt(parts[0]), Integer.parseInt(parts[1])));
-        }
+        try (BufferedReader reader = new BufferedReader(new FileReader(path))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if (line.isBlank() || line.startsWith("#")) continue;
 
-        Graph g = new Graph(maxNode + 1);  // Automatically handles vertex count
-        for (String[] parts : parsed) {
-            int from = Integer.parseInt(parts[0]);
-            int to = Integer.parseInt(parts[1]);
-            double[] weights = new double[numCriteria];
-            for (int i = 0; i < numCriteria; i++) {
-                weights[i] = Double.parseDouble(parts[2 + i]);
+                String[] parts = line.trim().split("\\s+");
+                if (parts.length < 2 + numCriteria) continue;
+
+                int from = Integer.parseInt(parts[0]);
+                int to = Integer.parseInt(parts[1]);
+                double[] weights = new double[numCriteria];
+                for (int i = 0; i < numCriteria; i++) {
+                    weights[i] = Double.parseDouble(parts[2 + i]);
+                }
+
+                // Add forward edge
+                adj.computeIfAbsent(from, k -> new ArrayList<>())
+                    .add(new Edge(from, to, weights));
+                // Add reverse edge
+                adj.computeIfAbsent(to, k -> new ArrayList<>())
+                    .add(new Edge(to, from, weights));
             }
-            g.addEdge(from, to, weights);
         }
 
-        return g;
+        int maxNodeId = adj.keySet().stream().max(Integer::compareTo).orElse(0) + 1;
+        Graph graph = new Graph(maxNodeId);
+        graph.setAdjacencyMap(adj);
+
+        return graph;
     }
 }
